# ocr-pipeline

./: .dockerignore  .gitignore  .railwayignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEWA_Utility_Bill_Extracted.json  Dockerfile  Dockerfile.ci  FINAL_TEST_REPORT.md  NOISE_ROBUSTNESS_SUMMARY.md  OCR_IMPROVEMENT_AREAS.md  OCR_PIPELINE_REPORT.md  PRODUCTION_SUMMARY.md  PYTORCH_MOBILE_STATUS.md  README.md  SEWA_Utility_Bill_Extracted.json  __init__.py  __main__.py  adaptive_ocr_pipeline.py  agents.md  calibrate.py  confidence_accuracy_analysis.json  confidence_analysis.py  config.py  config.py.backup  create_pretrained_weights.py  engine.py  extractor.py  imghdr.py  imghdr_compat.py  jax_denoising_adapter.py  main.py  missing_changes.patch  nixpacks.toml  numpy.py  ocr.py  output_png.json  pipeline.py  pipeline_stub.py  pyproject.toml  (+20 more)
.github/workflows/: ci.yml
jax_checkpoints/: model_info.json  training_results.json
pytorch_mobile/: README.md  ocr_pipeline.py  test_output.txt  test_pipeline.py
synthetic_training_data/: degradation_metadata.json
tests/: comprehensive_test_report_20250629.md  consolidated_test_report_20250629_113809.txt  engine_accuracy_comparison_20250629.md  run_comprehensive_tests.py  test_accuracy_comprehensive.py  test_ci_basic.py  test_ci_minimal.py  test_consolidated_comprehensive.py  test_deterministic_fields.py  test_extract.py  test_hierarchy.py  test_hyperparams.py  test_llm_fallback.py  test_multilingual.py  test_ocr_improvements.py  test_ocr_thresholds.py  test_pipeline_performance.py  test_tesseract_config.py
tests/assets/: expected_fields.json
